Update translate list

--- a/src/translations/en-US.json
+++ b/src/translations/en-US.json
@@ -1,6 +1,9 @@
 {
   "APP_NAME": "ngX-Rocket",
   "About": "About",
+  "Ff Test Page": "Ff Test Page",
+  "Find jokes": "Find jokes",
+  "Submit": "Submit",
   "Hello world !": "Hello world !",
   "Home": "Home",
   "Logged in as": "Logged in as",
