--- a/src/translations/fr-FR.json
+++ b/src/translations/fr-FR.json
@@ -1,6 +1,9 @@
 {
   "APP_NAME": "ngX-Rocket",
   "About": "A propos",
+  "Ff Test Page": "PAGE DE TEST FF",
+  "Find jokes": "Trouver des blagues",
+  "Submit": "Soumettre",
   "Hello world !": "Bonjour le monde !",
   "Home": "Accueil",
   "Logged in as": "Connecté en tant que",
